--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,3 +1,9 @@
-@import "mixins/colors";
-
+@import "mixins/text";
 @import "layout/layout";
+@import "layout/header";
+@import "layout/footer";
+@import "layout/main";
+@import "layout/posts";
+@import "layout/table";
+@import "components/box";
+@import "vendor/prism";
