--- a/src/_includes/partials/post.njk
+++ b/src/_includes/partials/post.njk
@@ -5,6 +5,7 @@
         <span class="subtitle">{{ metadata.subtitle }}</span>
     </a>
 </h2>
+{% include "partials/topmenu.njk" %}
 </header>
 <main>
     {{ content | safe }}
