--- a/src/css/components/_box.scss
+++ b/src/css/components/_box.scss
@@ -1,4 +1,5 @@
 @import "../constants/palette";
+@import "./box-mixins";
 
 @property --border-angle {
   syntax: "<angle>";
@@ -14,31 +15,24 @@
   border-radius: 18px;
   position: relative;
   opacity: 0.8;
-  background: linear-gradient(
-    var(--border-angle),
-    $color-secondary,
-    $color-primary
-  );
-  box-shadow: -10px -10px 36px -10px #fff, 15px 15px 25px 0 #000;
+
+  @include box-colors;
 
   &.animate {
     transition: --border-angle 700ms;
   }
 
-  &::before {
-    content: " ";
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: calc(100% - 20px);
-    height: calc(100% - 20px);
-    border-radius: 10px;
-    background: #000;
-  }
+  @include box-border-size(10px);
 }
 
 article-box {
   display: grid;
+
+  article {
+    grid-row: 1;
+    grid-column: 1;
+    z-index: 5;
+  }
 
   &:hover .box.animate {
     --border-angle: 270deg;
