--- a/src/css/layout/_posts.scss
+++ b/src/css/layout/_posts.scss
@@ -1,23 +1,47 @@
+@import "../constants/palette";
+@import "../components/box-mixins";
+
 nav.main {
-  flex-grow: 10;
   display: grid;
   place-content: center;
 }
 
 ul.posts {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 500px 500px;
   gap: 16px;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
   list-style-type: none;
+  margin-top: 5rem;
 
   li {
     width: 500px;
-    height: 200px;
+    min-height: 200px;
+    height: 100%;
     border-radius: 5px;
     align-self: center;
     justify-self: center;
     display: grid;
+  }
+
+  article-box {
+    height: 100%;
+
+    .box {
+      @include box-colors-reset;
+      @include box-border-size(5px);
+
+      border-radius: 14px;
+      transition: --border-angle 500ms, box-shadow 500ms, background 500ms;
+    }
+
+    &:hover .box {
+      @include box-colors;
+    }
+  }
+
+  article {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 }
