--- a/src/css/common/_palette.scss
+++ b/src/css/common/_palette.scss
@@ -12,11 +12,12 @@ $color-border-light: #6272a4;
 
 @mixin box-colors {
   background: linear-gradient(
-                  var(--border-angle),
-                  $color-secondary,
-                  $color-primary
+    var(--border-angle),
+    $color-secondary,
+    $color-primary
   );
-  box-shadow: -10px -10px 36px -10px #fff, 15px 15px 25px 0 #000;
+  //box-shadow: -10px -10px 36px -10px #fff, 15px 15px 25px 0 #000;
+  box-shadow: 3px 3px 15px 3px #000;
 }
 
 @mixin box-colors-reset {
