--- a/src/css/common/_text.scss
+++ b/src/css/common/_text.scss
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap");
 
 @mixin font-header {
-  font-family: "Righteous", system-ui;
+  font-family: "Noto Serif", serif, system-ui;
 }
 
 @mixin font-content {
