--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -1,5 +1,5 @@
-@import "../constants/palette";
-@import "../constants/text";
+@import "../common/palette";
+@import "../common/text";
 
 $header-size: 7em;
 
@@ -15,19 +15,25 @@ header {
   background: #000c;
 
   @include font-header;
-
+  p,
   h1,
   h2 {
     grid-column: 2;
-    gap: 0.2em;
+    font-size: 2.5em;
+    font-weight: 400;
+
+    @media (max-width: 1000px) {
+      font-size: 2em;
+    }
 
     &,
     & > a {
+      gap: 0.2em;
       display: flex;
       flex-direction: column;
     }
 
-    > span {
+    span {
       display: block;
       text-align: center;
     }
@@ -38,15 +44,8 @@ header {
 
     .subtitle {
       font-size: 0.5em;
+      line-height: 2rem;
     }
-  }
-
-  h1 {
-    font-size: 3.5em;
-  }
-
-  h2 {
-    font-size: 2.5em;
   }
 
   .links {
@@ -62,18 +61,23 @@ header {
     align-items: center;
   }
 
-  .github > svg {
-    fill: $color-foreground;
+  .github,
+  .instagram {
+    > svg {
+      fill: $color-foreground;
+    }
   }
 
   .github,
+  .instagram,
   .avatar,
   .avatar > img {
-    width: 3em;
-    height: 3em;
+    width: 2.25em;
+    height: 2.25em;
   }
 
   .github,
+  .instagram,
   .avatar {
     transition: 0.3s transform ease;
 
