--- a/src/css/layout/_table.scss
+++ b/src/css/layout/_table.scss
@@ -1,8 +1,9 @@
-@import "../constants/palette";
+@import "../common/palette";
 
 $color-table-border: $color-border-light;
 
-td, th {
+td,
+th {
   padding: 0.3em;
   vertical-align: middle;
   border-left: 1px solid $color-table-border;
