--- a/src/css/layout/_text.scss
+++ b/src/css/layout/_text.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap");
 @import "../common/palette";
 @import "../common/text";
 
