--- a/src/_includes/layouts/layout.njk
+++ b/src/_includes/layouts/layout.njk
@@ -80,6 +80,15 @@
     }
 
     customElements.define('article-box', ArticleBox);
+    tables = document.getElementsByTagName('table');
+    if (tables && tables.length) {
+        for (const table of tables) {
+            const wrapper = document.createElement('div');
+            wrapper.classList.add('table-wrapper');
+            table.parentNode.insertBefore(wrapper, table)
+            wrapper.appendChild(table)
+        }
+    }
 </script>
 </body>
 </html>
