--- a/src/css/content/about-me.scss
+++ b/src/css/content/about-me.scss
@@ -5,12 +5,23 @@ main article-box {
   .about-me-box {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     margin: 3rem 5rem;
     column-gap: 5rem;
 
+    @media (max-width: 1200px) {
+      flex-direction: column;
+      margin: 0;
+    }
+
     img {
       border-radius: 10px;
+      max-width: 50vw;
+
+      @media (max-width: 1200px) {
+        margin: 1rem 0 2rem 0;
+        align-self: center;
+      }
     }
   }
 }
@@ -23,5 +34,9 @@ main article-box {
   h2 {
     font-size: 1.7rem;
     margin: 0;
+
+    @media (max-width: 1200px) {
+      align-self: center;
+    }
   }
 }
