--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -9,16 +9,22 @@ header {
   box-shadow: 0 3px 10px 0 var(--color-background);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-areas: "empty header socials";
   justify-items: center;
   align-content: center;
   color: $color-foreground;
   background: #000c;
 
+  @media only screen and (max-device-width: 1000px) {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "header socials";
+  }
+
   @include font-header;
   p,
   h1,
   h2 {
-    grid-column: 2;
+    grid-area: header;
     font-size: 2.5em;
     font-weight: 400;
 
@@ -48,17 +54,17 @@ header {
     }
   }
 
-  .links {
-    grid-column: 3;
-    margin-right: 50px;
-  }
-
   .socials {
     display: flex;
     flex-direction: row;
     gap: 1em;
     height: 100%;
     align-items: center;
+    grid-area: socials;
+
+    @media (min-width: 1000px) {
+      margin-right: 50px;
+    }
   }
 
   .github,
