--- a/src/css/layout/_posts.scss
+++ b/src/css/layout/_posts.scss
@@ -61,5 +61,20 @@ ul.posts {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    h2 {
+      &::after {
+        content: "";
+        width: calc(100% + 2em);
+        height: 0.125em;
+        background: linear-gradient(
+          90deg,
+          $color-primary-background,
+          $color-secondary-background
+        );
+        transform: skewX(-45deg);
+        filter: brightness(1.3);
+      }
+    }
   }
 }
