--- a/src/css/common/_palette.scss
+++ b/src/css/common/_palette.scss
@@ -4,8 +4,11 @@ $color-background: #282a36;
 $color-foreground: #f8f8f2;
 $color-primary: #2f2;
 $color-secondary: #22f;
-$color-primary-background: #{color.adjust($color-primary, $lightness: -20%)};
-$color-secondary-background: #{color.adjust($color-secondary, $lightness: -20%)};
+$color-primary-background: color.adjust($color-primary, $lightness: -20%);
+$color-secondary-background: color.adjust($color-secondary, $lightness: -20%);
+$color-primary-background-light: color.adjust($color-primary-background, $whiteness: 15%);
+$color-secondary-background-light: color.adjust($color-secondary-background, $whiteness: 15%);
+$color-middle: mix($color-primary, $color-secondary, 40%);
 $color-primary-text: #a8ff60;
 $color-secondary-text: #96cbfe;
 $color-border-light: #6272a4;
