--- a/src/_includes/layouts/layout.njk
+++ b/src/_includes/layouts/layout.njk
@@ -28,6 +28,9 @@
     {% else %}
         {% include "partials/main.njk" %}
     {% endif %}
+    <footer>
+        {% include "partials/topmenu.njk" %}
+    </footer>
     <script>
         if (!("paintWorklet" in CSS)) {
             // render canvas
@@ -44,19 +47,15 @@
                     canvas.width = document.documentElement.clientWidth;
                     canvas.height = document.documentElement.clientHeight;
                     const ctx = canvas.getContext("2d");
-                    const params =  window.matchMedia("only screen and (orientation: portrait)") ? {
-                        colorFrom: "#27bb27",
-                        colorTo: "#2727bb",
-                        boxSize: 35
-                    } : {
-                        colorFrom: "#0b0",
-                        colorTo: "#00b",
-                        boxSize: 60,
-                    }
+                    const midTile =  window.matchMedia("only screen and (orientation: portrait) and (max-width: 1000px)");
+                    const smallTile = window.matchMedia("only screen and (orientation: portrait) and (max-width: 700px)");
+                    const boxSize = smallTile ? 30 : midTile ? 40 : 60;
                     gradientee(ctx, {
                         width: canvas.clientWidth,
                         height: canvas.clientHeight,
-                        ...params,
+                        colorFrom: "#0b0",
+                        colorTo: "#00b",
+                        boxSize: boxSize,
                         seed: 3200,
                         deflectionLevel: 20,
                         colorRandomness: 0,
