--- a/src/css/layout/_footer.scss
+++ b/src/css/layout/_footer.scss
@@ -1,58 +1,19 @@
 @import "../common/palette";
 
 footer {
-  width: 100vw;
-  height: 124px;
-  border-top: 1px solid $color-border-light;
-  color: $color-foreground;
-  background: $color-background;
-  margin-top: auto;
-  display: flex;
+  display: none;
 
-  .content {
-    margin: 12px auto;
+  @media screen and (max-width: 500px) {
+    height: 70px;
+    z-index: 10;
+    box-shadow: 0 3px 10px 0 var(--color-background);
     display: flex;
-    flex-direction: row;
-  }
-
-  .avatar {
-    border-radius: 50%;
-    height: 100%;
-    width: fit-content;
-    box-shadow: #6272a488 0 3px 10px 0;
-    overflow: hidden;
-
-    img {
-      height: 100%;
-      transform: scale(1.7) translate(-6px, 8px);
-    }
-  }
-
-  .about {
-    display: flex;
-    flex-direction: column;
-    font-size: 1rem;
-    justify-content: space-evenly;
-
-    .name {
-      font-weight: 600;
-      font-size: 1.1em;
-      padding-bottom: 8px;
-    }
-
-    span:not(.name) {
-      font-size: 0.9em;
-    }
-  }
-
-  .socials {
-    margin-left: auto;
-    display: flex;
-    flex-direction: row;
+    justify-content: center;
     align-items: center;
-
-    svg {
-      fill: $color-foreground;
-    }
+    color: $color-foreground;
+    background: #000c;
+    padding: 0 calc(50% - 512px);
+    margin-top: auto;
   }
+
 }
