Main page styles redone to comply with changing font size and zoom

--- a/src/_includes/partials/main.njk
+++ b/src/_includes/partials/main.njk
@@ -1,8 +1,10 @@
 <header>
-    <h1>
-        <span class="title">{{ metadata.title }}</span>
-        <span class="subtitle">{{ metadata.subtitle }}</span>
-    </h1>
+    <a href="/">
+        <h1>
+            <span class="title">{{ metadata.title }}</span>
+            <span class="subtitle">{{ metadata.subtitle }}</span>
+        </h1>
+    </a>
     {% include "partials/topmenu.njk" %}
 </header>
 <nav class="main">
