--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,9 +1,9 @@
-@import "layout/text";
-@import "layout/layout";
-@import "layout/header";
-@import "layout/footer";
-@import "layout/main";
-@import "layout/posts";
-@import "layout/table";
-@import "components/box";
-@import "vendor/prism";
+@import "reset";
+@import "background";
+@import "typography";
+@import "header";
+@import "socials";
+@import "box";
+@import "layout";
+@import "main";
+@import "footer";
