--- a/src/css/_typography.scss
+++ b/src/css/_typography.scss
@@ -30,7 +30,8 @@ h5 {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 3rem;
+  line-height: 3rem;
 }
 
 h2 {
@@ -46,9 +47,7 @@ strong {
   font-weight: 600;
 }
 
-/*
 ol,
 li {
   margin-left: 2em;
 }
-*/
