--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,9 +1,12 @@
 @import "reset";
 @import "background";
 @import "typography";
+@import "table";
+@import "prism";
 @import "header";
 @import "socials";
 @import "box";
 @import "layout";
 @import "main";
+@import "single";
 @import "footer";
