--- a/src/css/variables/_palette.scss
+++ b/src/css/variables/_palette.scss
@@ -21,6 +21,8 @@ $color-primary-text: #a8ff60;
 $color-secondary-text: #96cbfe;
 $color-border-light: #6272a4;
 $color-background-smoke: #000c;
+$color-background-white: #fff4;
+$color-background-white-hover: #fff9;
 $color-black: #000;
 
 @mixin box-colors-reset {
