--- a/src/css/_box.scss
+++ b/src/css/_box.scss
@@ -44,3 +44,13 @@ article-box {
     }
   }
 }
+
+a:focus-visible,
+a:focus {
+  .box.animate::before {
+    top: 0.5rem;
+    left: 0.5rem;
+    width: calc(100% - 1rem);
+    height: calc(100% - 1rem);
+  }
+}
