--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -1,3 +1,5 @@
+@import "variables/palette";
+
 nav.main,
 main {
   --width: 1024px;
@@ -44,5 +46,30 @@ main {
         border-radius: 0;
       }
     }
+  }
+}
+
+.up-arrow {
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  z-index: 10;
+  display: none;
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: 0.5rem;
+  border-radius: 10px;
+  background: $color-background-white;
+  cursor: pointer;
+  fill: $color-foreground;
+  transition: 300ms ease;
+
+  &.visible {
+    display: block;
+  }
+
+  &:hover {
+    background: $color-background-white-hover;
+    fill: $color-background;
   }
 }
