--- a/src/_includes/layouts/layout.njk
+++ b/src/_includes/layouts/layout.njk
@@ -35,14 +35,6 @@
             <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
         </svg>
     </div>
-    <script>
-    {% set js %}
-        {% include "src/js/article-box.js" %}
-        {% include "src/js/background.js" %}
-        {% include "src/js/table-wrapper.js" %}
-        {% include "src/js/go-to-top.js" %}
-    {% endset %}
-    {{ js | jsmin | safe }}
-    </script>
+    <script type="text/javascript" src="/js/main.min.js"></script>
 </body>
 </html>
