--- a/src/_includes/layouts/layout.njk
+++ b/src/_includes/layouts/layout.njk
@@ -6,6 +6,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, TypeScript, React, UI, WebDev">
     <meta name="author" content="Michal Fogelman">
     <meta name="viewport" content="width=device-width">
+    <meta name="generator" content="Eleventy">
     <title>{{ metadata.title }}</title>
     <link rel="stylesheet" href="{{ '/css/style.css' | url }}"/>
     {% if stylesheet %}
