--- a/src/_includes/layouts/layout.njk
+++ b/src/_includes/layouts/layout.njk
@@ -7,6 +7,12 @@
     <meta name="author" content="Michal Fogelman">
     <meta name="viewport" content="width=device-width">
     <meta name="generator" content="Eleventy">
+    <meta property='og:title' content='Making UI'/>
+    <meta property='og:image' content='https://making-ui.dev/images/thumbnails/{{title}}.png/'/>
+    <meta property='og:description' content='{{ title }}'/>
+    <meta property='og:url' content='https://making-ui.dev/'/>
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
     <title>{{ metadata.title }}</title>
     <link rel="stylesheet" href="{{ '/css/style.css' | url }}"/>
     {% if stylesheet %}
