--- a/src/_includes/layouts/layout.njk
+++ b/src/_includes/layouts/layout.njk
@@ -20,6 +20,7 @@
     {%  endif %}
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='627' />
+    <meta property="og:type" content="website" />
     <title>{{ metadata.title }}</title>
     <link rel="stylesheet" href="{{ '/css/style.css' | url }}"/>
     {% if stylesheet %}
