--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,7 @@
 @import "reset";
 @import "background";
 @import "typography";
+@import "components";
 @import "table";
 @import "prism";
 @import "header";
@@ -10,3 +11,4 @@
 @import "main";
 @import "single";
 @import "footer";
+@import "cookie-consent";
