--- a/src/css/_background.scss
+++ b/src/css/_background.scss
@@ -3,7 +3,8 @@
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  height: 100%;
+  min-height: 100vh;
   background: $color-background;
   background: linear-gradient(
     90deg,
