--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -1,12 +1,11 @@
 @import "variables/palette";
 
 nav.main,
-main {
+main,
+.cookie-banner .content,
+footer {
   --width: 1024px;
   --margin: 3rem;
-
-  width: min(var(--width), calc(100% - (2 * var(--margin))));
-  margin: var(--margin) auto;
 
   @media screen and (max-width: 700px) {
     --margin: 2rem;
@@ -15,6 +14,13 @@ main {
   @media screen and (max-width: 512px) {
     --margin: 1rem;
   }
+}
+
+nav.main,
+main,
+.cookie-banner .content {
+  width: min(var(--width), calc(100% - (2 * var(--margin))));
+  margin: var(--margin) auto;
 }
 
 nav.main {
@@ -28,7 +34,8 @@ nav.main {
   }
 }
 
-main {
+main,
+.cookie-banner .content {
   @media screen and (max-width: 700px) {
     --margin-filled: min(1rem, 5vw);
 
